feat: add and configure jetstream and livewire.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
+[x-cloak] {
+    display: none;
+}
+
 html {
     font-family: "Sora", sans-serif;
     overflow-x: hidden;
